Fix bug: image in post card can be overflowed.

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -171,4 +171,8 @@ article {
       background: colors.$color-slate-200;
     }
   }
+
+  img {
+    max-width: 100%;
+  }
 }
